--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.CAMERA" /> 
     <!--读文件权限--> 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> 
+    <!-- PRINTER PERMISSION -->
+    <uses-permission android:name="android.permission.BIND_PRINT_SERVICE" />
 
     <application
       android:name=".MainApplication"
